--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%}
 {% load thumbnail %}
+{% load static %}
 {% block title %}
    {{ group.title }}
 {% endblock %}
@@ -10,6 +11,7 @@
    <p>
      {{ group.description }}
   </p>
+<link rel="stylesheet" type="text/css" href="{% static 'css/image.css' %}">
 {% for post in page_obj %}
    <ul>
      <li>
@@ -22,8 +24,8 @@
 <p>
    {{post.text}}
 </p>
-{% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-      <img class="card-img my-2" src="{{ im.url }}">
+{% thumbnail post.image "600x420" crop="center" upscale=True as im %}
+    <img class="card-img my-2 image-container" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" class="img-fluid">
 {% endthumbnail %}
 {% if not forloop.last %}<hr>{% endif %}
 {% endfor %}
