--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,6 +3,9 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 {% load thumbnail %}
 {% include 'posts/includes/switcher.html' %}
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/image.css' %}">
 {% for post in page_obj %}
     <ul>
         <li>
@@ -12,8 +15,8 @@
           Дата публикации: {{ post.pub_date|date:"d M Y" }}
         </li>
     </ul>
-   {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-    <img class="card-img my-2" src="{{ im.url }}">
+   {% thumbnail post.image "600x420" crop="center" upscale=True as im %}
+    <img class="card-img my-2 image-container" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" class="img-fluid">
    {% endthumbnail %}
     <p>
       {{post.text}}
