--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -28,8 +28,11 @@
           <li class="nav-item"> 
             <a class="nav-link link-light {% if view_name  == 'users:password_reset' %}active{% endif %}" href="{% url 'users:password_reset' %}">Изменить пароль</a>
           </li>
-          <li class="nav-item"> 
-            <a class="nav-link {% if view_name == 'users:logout' %}active{% endif %}" href="{% url 'users:logout' %}">Выйти</a>
+          <li class="nav-item">
+              <form method="post" action="{% url 'users:logout' %}">
+              {% csrf_token %}
+           <button type="submit" class="nav-link btn btn-link">Выйти</button>
+              </form>
           </li>
           <li>
             Пользователь: {{ user.username }}
